--- a/example/example.html
+++ b/example/example.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!--stylesheet imports-->
-    <link rel="stylesheet" href="../assignment/css/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   </head>
   <body>
     <!--left panel-->
@@ -14,8 +14,8 @@
 
     <!--javascript imports-->
     <script src="../data/phillySchools.js"></script>
-    <script src="../assignment/js/leaflet.js"></script>
-    <script src="../assignment/js/underscore.js"></script>
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+    <script src="../lab/lab2/underscore.js"></script>
     <script src="example.js"></script>
   </body>
 </html>
