--- a/lab/lab2/part4-underscore-refactor.html
+++ b/lab/lab2/part4-underscore-refactor.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- Stylesheet Imports -->
-    <link rel="stylesheet" href="../../assignment/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
   </head>
   <body>
 
@@ -13,14 +13,14 @@
 
     <!-- Javascript Imports -->
     <script src="../../data/phillySchools.js"></script>
-    <script src="../../assignment/leaflet.js"></script>
-    <script src="../../assignment/underscore.js"></script>
+    <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+    <script src="underscore.js"></script>
 
     <!-- =====================
     Reminder: the JS you write is now *entirely* in .js files! Edit lab2.js.
     ====================== -->
 
-    <script src="lab2.js"></script>
+    <script src="part4-underscore-refactor.js"></script>
 
   </body>
 </html>
